# battlebornintel

./: .env.example  .gitignore  BBV_100_105_MASTER_INDEX.md  CLAUDE.md  CODEBASE_OVERVIEW.md  DATA_QUALITY_ARCHITECTURE.md  DELIVERABLES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INTEGRATION_PLAN.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SUMMARY.md  EDGES-FORMATTED-C76-C81.js  IMPLEMENTATIONS_REFERENCE.md  IMPLEMENTATION_CHECKLIST.md  INVESTOR-PARTNER-REFERENCE-C76-C81.md  OPTIMIZATION-SUMMARY.txt  OPTIMIZATION_DELIVERY_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  QUICK_REFERENCE.md  QUICK_START_OPTIMIZATIONS.md  README_DATA_QUALITY.md  README_OPTIMIZATION.md  READY_TO_IMPLEMENT_SNIPPETS.md  RESEARCH-SUMMARY-BBV-COMPANIES-76-81.md  RESEARCH_SUMMARY_100_105.md  STAKEHOLDER_ACTIVITIES_SUMMARY.txt  WEEKLY_BRIEF_FILE_MANIFEST.txt  WEEKLY_BRIEF_FILE_PATHS.txt  WEEKLY_BRIEF_QUICK_START.md  WEEKLY_BRIEF_SUMMARY.txt  bbv-94-99-edges.json  bbv_edges_100_105.js  bbv_portfolio_edges_100_105.json  consolidate_edges.js  docker-compose.yml  edge-research-c76-c81.json  index.html  nixpacks.toml  package-lock.json  (+5 more)
agents/: .env.example  cron_scheduler.py  package.json  pyproject.toml  requirements.txt  run_agent.py  scheduler.js
agents/enrichment/: dedup.js  discover-entities.js  discover-relationships.js  enrich-entities.js  run.js  search-entities.js
agents/lib/: confidence.js  db.js  llm.js  search.js
agents/prompts/: company_analyst.md  pattern_detector.md  risk_assessor.md  weekly_brief.md
agents/snapshot/: run.js
agents/src/: cli.py  config.py  db.py  (+1 more)
(+899 files in other folders)
