[project]
name = "bbi-agents"
version = "1.0.0"
description = "BBI AI analysis and data ingestion agents"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
